Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-08 17:07+0000\n"
+"POT-Creation-Date: 2022-03-09 21:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The OpenShift flavor / version to use. Older versions of OpenShift have minor differrences in the labels and fields they support. This option allows users to have their manifests automatically aligned to the OpenShift 'flavor' they use.\n"
+"The OpenShift flavor / version to use. Older versions of OpenShift have minor differences in the labels and fields they support. This option allows users to have their manifests automatically aligned to the OpenShift 'flavor' they use.\n"
 "--"
 msgstr ""
 
@@ -245,7 +245,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Whether or not to add the build timestamp to the Kubernetes annotations This is a very useful way to have manifests of successive builds of the same application differ - thus ensuring that Kubernetes will apply the updated resources\n"
+"Add the build timestamp to the Kubernetes annotations This is a very useful way to have manifests of successive builds of the same application differ - thus ensuring that Kubernetes will apply the updated resources\n"
 "--"
 msgstr ""
 
