--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-08 17:12+0000\n"
+"POT-Creation-Date: 2022-03-09 21:11+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -56,7 +56,7 @@ msgstr "OidcClient"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:21
 #, fuzzy
-msgid "Add the following Maven dependency:"
+msgid "Add the following dependency:"
 msgstr "テストプロジェクトに以下の依存関係を追加します。"
 
 #. type: delimited block -
