--- a/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-03-09 21:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -446,7 +446,7 @@ msgstr ""
 #: upstream/_guides/amqp-reference.adoc:196
 #, no-wrap
 msgid ""
-"    @Incoming(\"from-amqp\")\n"
+"    @Incoming(\"from-amqp\") // <1>\n"
 "    public void consume(JsonObject p) {   // <2>\n"
 "        Price price = p.mapTo(Price.class);  // <3>\n"
 "        prices.add(price);\n"
