Apply translation memory

--- a/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt-build.adoc.po
@@ -65,7 +65,7 @@ msgstr "Mavenへの依存"
 #: upstream/_guides/security-jwt-build.adoc:24
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt-build.adoc:30
@@ -81,7 +81,7 @@ msgstr ""
 #: upstream/_guides/security-jwt-build.adoc:33
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt-build.adoc:36
