--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -170,7 +170,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/security-openid-connect.adoc:934
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:79
@@ -191,7 +191,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect.adoc:944
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:85
