--- a/l10n/po/ja_JP/_guides/security-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-properties.adoc.po
@@ -41,7 +41,7 @@ msgstr "以下を `pom.xml` に追加してください:"
 #: upstream/_guides/security-properties.adoc:17
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-properties.adoc:23
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_guides/security-properties.adoc:26
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-properties.adoc:29
