--- a/l10n/po/ja_JP/_guides/smallrye-graphql-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql-client.adoc.po
@@ -128,7 +128,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/smallrye-graphql-client.adoc:84
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql-client.adoc:94
@@ -148,7 +148,7 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql-client.adoc:97
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql-client.adoc:101
