--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -98,7 +98,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/spring-boot-properties.adoc:48
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/spring-boot-properties.adoc:54
@@ -114,7 +114,7 @@ msgstr ""
 #: upstream/_guides/spring-boot-properties.adoc:57
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/spring-boot-properties.adoc:60
@@ -330,7 +330,7 @@ msgstr "設定ファイルの変更はすぐに反映されます。"
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:153
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:157
@@ -340,7 +340,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:159
 msgid "You can also generate the native executable with:"
-msgstr ""
+msgstr "次のようにネイティブ実行可能ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:162
