--- a/l10n/po/ja_JP/_guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cache.adoc.po
@@ -81,7 +81,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/spring-cache.adoc:38
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/spring-cache.adoc:44
@@ -97,7 +97,7 @@ msgstr ""
 #: upstream/_guides/spring-cache.adoc:47
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/spring-cache.adoc:50
