--- a/l10n/po/ja_JP/_guides/stork.adoc.po
+++ b/l10n/po/ja_JP/_guides/stork.adoc.po
@@ -191,7 +191,7 @@ msgstr "また、生成されたプロジェクトに、以下の依存関係を
 #: upstream/_guides/stork.adoc:82
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/stork.adoc:92
@@ -211,7 +211,7 @@ msgstr ""
 #: upstream/_guides/stork.adoc:95
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/stork.adoc:99
