--- a/l10n/po/ja_JP/_guides/security-ldap.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-ldap.adoc.po
@@ -127,7 +127,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/security-ldap.adoc:61
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:67
@@ -143,7 +143,7 @@ msgstr ""
 #: upstream/_guides/security-ldap.adoc:70
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:73
