--- a/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
@@ -97,7 +97,7 @@ msgstr "Mavenプラグインを使用したくない場合は、pom.xmlに依存
 #: upstream/_guides/security-oauth2.adoc:332
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-oauth2.adoc:53
@@ -114,7 +114,7 @@ msgstr ""
 #: upstream/_guides/security-oauth2.adoc:344
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-oauth2.adoc:59
@@ -533,7 +533,7 @@ msgstr "アプリケーションをパッケージ化して実行する"
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:281
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:285
