--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -129,7 +129,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:59
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:65
@@ -145,7 +145,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:68
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:71
