--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -133,7 +133,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1182
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:66
@@ -153,7 +153,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1192
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:72
