--- a/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
@@ -153,7 +153,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/smallrye-graphql.adoc:828
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:84
@@ -170,7 +170,7 @@ msgstr ""
 #: upstream/_guides/smallrye-graphql.adoc:837
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/smallrye-graphql.adoc:90
