--- a/l10n/po/ja_JP/_guides/software-transactional-memory.adoc.po
+++ b/l10n/po/ja_JP/_guides/software-transactional-memory.adoc.po
@@ -104,7 +104,7 @@ msgstr "このエクステンションを使用するには、アプリケーシ
 #: upstream/_guides/software-transactional-memory.adoc:92
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/software-transactional-memory.adoc:98
@@ -137,7 +137,7 @@ msgstr ""
 #: upstream/_guides/software-transactional-memory.adoc:101
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/software-transactional-memory.adoc:104
