--- a/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
@@ -94,7 +94,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/spring-cloud-config-client.adoc:44
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/spring-cloud-config-client.adoc:50
@@ -110,7 +110,7 @@ msgstr ""
 #: upstream/_guides/spring-cloud-config-client.adoc:53
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/spring-cloud-config-client.adoc:56
