--- a/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
@@ -94,7 +94,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/spring-data-rest.adoc:68
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/spring-data-rest.adoc:55
@@ -111,7 +111,7 @@ msgstr ""
 #: upstream/_guides/spring-data-rest.adoc:78
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/spring-data-rest.adoc:61
