--- a/l10n/po/ja_JP/_guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-di.adoc.po
@@ -99,7 +99,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/spring-di.adoc:46
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/spring-di.adoc:52
@@ -115,7 +115,7 @@ msgstr ""
 #: upstream/_guides/spring-di.adoc:55
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/spring-di.adoc:58
