--- a/l10n/po/ja_JP/_guides/stork-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/stork-reference.adoc.po
@@ -97,7 +97,7 @@ msgstr "この機能を使用するには、プロジェクトに以下の依存
 #: upstream/_guides/stork-reference.adoc:219
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/stork-reference.adoc:40
@@ -115,7 +115,7 @@ msgstr ""
 #: upstream/_guides/stork-reference.adoc:234
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/stork-reference.adoc:46
