Add machine translation

--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -1314,8 +1314,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/building-native-image.adoc:792
+#, fuzzy
 msgid "For a more detailed guide about debugging native images please refer to the xref:native-reference.adoc[Native Reference Guide]."
-msgstr ""
+msgstr "ネイティブ画像のデバッグについてのより詳細なガイドは、 link:native-reference.html[Native Reference Guideを]参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/building-native-image.adoc:794
