--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -931,14 +931,15 @@ msgstr "スタイリングの詳細については、このブログのエント
 
 #. type: Title ===
 #: upstream/_guides/openapi-swaggerui.adoc:527
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Cross Origin Resource Sharing"
-msgstr ""
+msgstr "クロスオリジンリソース共有"
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:530
+#, fuzzy
 msgid "If you plan to consume this application from a Single Page Application running on a different domain, you will need to configure CORS (Cross-Origin Resource Sharing). Please read the xref:http-reference.adoc#cors-filter[HTTP CORS documentation] for more details."
-msgstr ""
+msgstr "別のドメインで動作する Single Page Application からこのアプリケーションを利用する場合は、CORS (Cross-Origin Resource Sharing) を設定する必要があります。詳細については、 link:http-reference.html#cors-filter[HTTP CORSのドキュメントを]参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/openapi-swaggerui.adoc:531
