--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -634,8 +634,9 @@ msgstr "OpenID Connectプロバイダの管理コンソールで、 `quarkus.oid
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:250
+#, fuzzy
 msgid "Run:"
-msgstr ""
+msgstr "走る。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:254
