--- a/l10n/po/ja_JP/_guides/stork.adoc.po
+++ b/l10n/po/ja_JP/_guides/stork.adoc.po
@@ -178,8 +178,9 @@ msgstr "プロジェクトのブートストラップ"
 
 #. type: Plain text
 #: upstream/_guides/stork.adoc:74
+#, fuzzy
 msgid "Create a Quarkus project importing the quarkus-rest-client-reactive and quarkus-resteasy-reactive extensions using your favorite approach:"
-msgstr ""
+msgstr "Quarkus-rest-client-reactiveおよびquarkus-resteasy-reactive拡張をインポートして、好みのアプローチでQuarkusプロジェクトを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/stork.adoc:80
@@ -663,8 +664,9 @@ msgstr "アプリケーションのアーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/stork.adoc:344
+#, fuzzy
 msgid "And run it:"
-msgstr ""
+msgstr "そして実行する。"
 
 #. type: delimited block -
 #: upstream/_guides/stork.adoc:348
@@ -703,8 +705,9 @@ msgstr "このアプリケーションをネイティブ実行可能ファイル
 
 #. type: Plain text
 #: upstream/_guides/stork.adoc:369
+#, fuzzy
 msgid "And start it with:"
-msgstr ""
+msgstr "と始める。"
 
 #. type: delimited block -
 #: upstream/_guides/stork.adoc:373
