--- a/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
@@ -81,14 +81,12 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:43
 #, fuzzy
-#| msgid "This command generates the Maven project with a REST endpoint and imports the `elytron-security-oauth2` extension, which includes the OAuth2 opaque token support."
 msgid "This command generates a project and imports the `elytron-security-oauth2` extension, which includes the OAuth2 opaque token support."
 msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、OAuth2不透明トークンのサポートを含む `elytron-security-oauth2` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:45
 #, fuzzy
-#| msgid "If you don't want to use the Maven plugin, you can just include the dependency in your pom.xml:"
 msgid "If you don't want to use the Maven plugin, you can just include the dependency in your build file:"
 msgstr "Mavenプラグインを使用したくない場合は、pom.xmlに依存関係を含めるだけです。"
 
@@ -131,7 +129,6 @@ msgstr "JAX-RSリソースを調べる"
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:64
 #, fuzzy
-#| msgid "Open the `src/main/java/org/acme/security/oauth2/TokenSecuredResource.java` file and see the following content:"
 msgid "Create the `src/main/java/org/acme/security/oauth2/TokenSecuredResource.java` file with the following content:"
 msgstr "`src/main/java/org/acme/security/oauth2/TokenSecuredResource.java` ファイルを開くと、以下のような内容が表示されます。"
 
@@ -537,8 +534,9 @@ msgstr "いつものように、アプリケーションは以下の方法でパ
 
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:285
+#, fuzzy
 msgid "And executed using `java -jar target/quarkus-app/quarkus-run.jar`:"
-msgstr ""
+msgstr "そして、 `java -jar target/quarkus-app/quarkus-run.jar` を使って実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-oauth2.adoc:293
@@ -554,7 +552,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:296
 #, fuzzy
-#| msgid "You can also generate the native executable with `./mvnw clean package -Pnative`."
 msgid "You can also generate the native executable with:"
 msgstr "`./mvnw clean package -Pnative` でネイティブ実行可能ファイルを生成することもできます。"
 
