--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-03-10 02:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,6 +43,30 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:16
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-infinispan-client-infinispan-client-build-time-config_quarkus.infinispan-client.health.enabled]]`link:#quarkus-infinispan-client-infinispan-client-build-time-config_quarkus.infinispan-client.health.enabled[quarkus.infinispan-client.health.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether a health check is published in case the smallrye-health extension is present.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:17
+#, no-wrap
+msgid "boolean"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:20
+#, no-wrap
+msgid "`true`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:25
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-infinispan-client-infinispan-client-build-time-config_quarkus.infinispan-client.near-cache-max-entries]]`link:#quarkus-infinispan-client-infinispan-client-build-time-config_quarkus.infinispan-client.near-cache-max-entries[quarkus.infinispan-client.near-cache-max-entries]`\n"
 "\n"
 "[.description]\n"
@@ -52,13 +76,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:17
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:26
 #, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:19
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:28
 #, no-wrap
 msgid "`0`"
 msgstr ""
