--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc.po
@@ -55,13 +55,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:17
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:20
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-build-time-config.adoc:25
