Update .po files

--- a/l10n/po/ja_JP/_guides/flyway.adoc.po
+++ b/l10n/po/ja_JP/_guides/flyway.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-03-10 16:07+0000\n"
 "PO-Revision-Date: 2021-02-15 15:13+0900\n"
 "Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
@@ -119,7 +119,7 @@ msgid ""
 "<!-- Flyway MariaDB/MySQL specific dependencies -->\n"
 "<dependency>\n"
 "    <groupId>org.flywaydb</groupId>\n"
-"    <artifactId>flyway-mariadb</artifactId>\n"
+"    <artifactId>flyway-mysql</artifactId>\n"
 "</dependency>\n"
 msgstr ""
 
@@ -147,9 +147,9 @@ msgid ""
 "// Flyway specific dependencies\n"
 "implementation(\"io.quarkus:quarkus-flyway\")\n"
 "// Flyway SQL Server specific dependencies\n"
-"implementation(\"org.flywaydb:\")\n"
+"implementation(\"org.flywaydb:flyway-sqlserver\")\n"
 "// Flyway MariaDB/MySQL specific dependencies\n"
-"implementation(\"org.flywaydb:\")\n"
+"implementation(\"org.flywaydb:flyway-mysql\")\n"
 "// JDBC driver dependencies\n"
 "implementation(\"io.quarkus:quarkus-jdbc-postgresql\")\n"
 msgstr ""
