Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/smallrye-kafka-outgoing.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/smallrye-kafka-outgoing.adoc.po
@@ -603,7 +603,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/smallrye-kafka-outgoing.adoc:130
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/smallrye-kafka-outgoing.adoc:132
