--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
@@ -3089,7 +3089,7 @@ msgstr ""
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1100
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:1100
