--- a/l10n/po/ja_JP/_versions/main/guides/kogito-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-dev-services-build-time-config.adoc.po
@@ -63,7 +63,7 @@ msgstr "boolean"
 #: upstream/_versions/main/guides/kogito-dev-services-build-time-config.adoc:46
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/main/guides/kogito-dev-services-build-time-config.adoc:25
