--- a/l10n/po/ja_JP/_versions/main/guides/rabbitmq-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rabbitmq-reference.adoc.po
@@ -1771,7 +1771,7 @@ msgstr ""
 #: upstream/_versions/main/guides/rabbitmq-reference.adoc:612
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/main/guides/rabbitmq-reference.adoc:614
