--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-kafka-incoming.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-kafka-incoming.adoc.po
@@ -363,7 +363,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-kafka-incoming.adoc:66
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/main/guides/smallrye-kafka-incoming.adoc:68
