--- a/l10n/po/ja_JP/_versions/2.2/guides/smallrye-kafka-incoming.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/smallrye-kafka-incoming.adoc.po
@@ -341,7 +341,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/smallrye-kafka-incoming.adoc:62
 #, no-wrap
 msgid "true"
-msgstr ""
+msgstr "true"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/smallrye-kafka-incoming.adoc:64
