Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/flyway.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/flyway.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-03-11 02:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -116,7 +116,7 @@ msgid ""
 "<!-- Flyway MariaDB/MySQL specific dependencies -->\n"
 "<dependency>\n"
 "    <groupId>org.flywaydb</groupId>\n"
-"    <artifactId>flyway-mariadb</artifactId>\n"
+"    <artifactId>flyway-mysql</artifactId>\n"
 "</dependency>\n"
 msgstr ""
 
@@ -144,9 +144,9 @@ msgid ""
 "// Flyway specific dependencies\n"
 "implementation(\"io.quarkus:quarkus-flyway\")\n"
 "// Flyway SQL Server specific dependencies\n"
-"implementation(\"org.flywaydb:\")\n"
+"implementation(\"org.flywaydb:flyway-sqlserver\")\n"
 "// Flyway MariaDB/MySQL specific dependencies\n"
-"implementation(\"org.flywaydb:\")\n"
+"implementation(\"org.flywaydb:flyway-mysql\")\n"
 "// JDBC driver dependencies\n"
 "implementation(\"io.quarkus:quarkus-jdbc-postgresql\")\n"
 msgstr ""
