Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-03-12 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -110,6 +110,32 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:43
 #, no-wrap
 msgid ""
+"[[quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-threshold]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-threshold[quarkus.quartz.misfire-threshold]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Defines how late the schedulers should be to be considered misfired.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:45
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:48
+#, no-wrap
+msgid "`60S`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:53
+#, no-wrap
+msgid ""
 "[[quarkus-quartz-quartz-runtime-config_quarkus.quartz.start-mode]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.start-mode[quarkus.quartz.start-mode]`\n"
 "\n"
 "[.description]\n"
@@ -119,13 +145,29 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:54
 #, no-wrap
 msgid "`normal`, `forced`, `halted`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:46
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:56
 #, no-wrap
 msgid "`normal`"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:60
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:64
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-quartz-quartz-runtime-config.adoc:68
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
