--- a/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
@@ -281,7 +281,7 @@ msgstr ""
 #: upstream/_versions/main/guides/command-mode-reference.adoc:141
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/command-mode-reference.adoc:144
@@ -293,7 +293,7 @@ msgstr ""
 #: upstream/_versions/main/guides/command-mode-reference.adoc:147
 #, no-wrap
 msgid "Gradle"
-msgstr ""
+msgstr "Gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/command-mode-reference.adoc:150
@@ -416,7 +416,7 @@ msgstr ""
 #: upstream/_versions/main/guides/command-mode-reference.adoc:215
 #, no-wrap
 msgid "Mocking"
-msgstr ""
+msgstr "モック"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/command-mode-reference.adoc:219
