Add machine translation

--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -254,22 +254,20 @@ msgstr "開発モード"
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:129
 #, fuzzy
-#| msgid "Also for command mode applications the dev mode is supported. When you run `mvn quarkus:dev`, the command mode application is executed."
 msgid "Also for command mode applications the dev mode is supported.  When you start your application in dev mode, the command mode application is executed:"
 msgstr "また、コマンドモードアプリケーションでは、開発モードにも対応しています。 `mvn compile quarkus:dev` を実行すると、コマンドモードアプリケーションが実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:133
 #, fuzzy
-#| msgid "As command mode applications will often require arguments to be passed on the commandline, this is also possible in dev mode via:"
 msgid "As command mode applications will often require arguments to be passed on the command line, this is also possible in dev mode:"
 msgstr "コマンドモードのアプリケーションでは、コマンドラインで引数を渡す必要があることが多く、これは開発モードでも可能です:"
 
 #. type: Block title
 #: upstream/_guides/command-mode-reference.adoc:135
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "CLI"
-msgstr ""
+msgstr "コマンドラインインタフェース"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:138
@@ -420,18 +418,21 @@ msgstr "モック"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:219
+#, fuzzy
 msgid "CDI injection is not supported in the `@QuarkusMainTest` tests.  Consequently, mocking CDI beans with `QuarkusMock` or `@InjectMock` is not supported either."
-msgstr ""
+msgstr "`@QuarkusMainTest` のテストでは、CDI インジェクションはサポートされていません。そのため、 `QuarkusMock` や `@InjectMock` を使って CDI Bean をモックすることもサポートされていません。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:221
+#, fuzzy
 msgid "It is possible to mock CDI beans by leveraging xref:getting-started-testing.adoc#testing_different_profiles[test profiles] though."
-msgstr ""
+msgstr "しかし、 link:getting-started-testing.html#testing_different_profiles[テストプロファイルを]活用することで、CDI Beanのモックを作成することは可能です。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:223
+#, fuzzy
 msgid "For instance, in the following test, the singleton `CdiBean1` will be mocked by `MockedCdiBean1`:"
-msgstr ""
+msgstr "例えば、次のテストでは、シングルトン `CdiBean1` は `MockedCdiBean1` によってモック化されます。"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:227
@@ -532,23 +533,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:272
+#, fuzzy
 msgid "List all the CDI beans for which you want to enable an alternative mocked bean."
-msgstr ""
+msgstr "代替モックビーンを有効にしたい CDI ビーンをすべて列挙します。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:273
+#, fuzzy
 msgid "Use `@Alternative` without a `@Priority`. Make sure you don't use `@Mock`."
-msgstr ""
+msgstr "`@Priority` を使用せずに `@Alternative` を使用する。 `@Mock` を使用しないことを確認する。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:274
+#, fuzzy
 msgid "The scope of the mocked bean should be consistent with the original one."
-msgstr ""
+msgstr "モックされたビーンのスコープは、元のビーンと一致する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:275
+#, fuzzy
 msgid "Using this pattern, you can enable specific alternatives for any given test."
-msgstr ""
+msgstr "このパターンを使用すると、任意のテストに対して特定の選択肢を有効にすることができます。"
 
 #~ msgid "As command mode applications will often require arguments to be passed on the commandline, this is also possible in dev mode via the `quarkus.args` system property. For example `mvn quarkus:dev -Dquarkus.args='--help'` and the same can be achieved with Gradle: `./gradlew quarkusDev --quarkus-args='--help'`."
 #~ msgstr "コマンドモードのアプリケーションでは、コマンドラインに引数を渡す必要がある場合が多いので、devモードでも `quarkus.args` システムプロパティを使って引数を渡すことができます。例えば、 `mvn quarkus:dev -Dquarkus.args='--help'` であり、Gradleでも同じことが可能です: `./gradlew quarkusDev --quarkus-args='--help'` 。"
