--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -1026,20 +1026,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:615
+#, fuzzy
 msgid "All these methods have default implementations so just override the ones you need to override."
-msgstr ""
+msgstr "これらのメソッドはすべてデフォルトで実装されているので、必要なものだけをオーバーライドしてください。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:618
 #, fuzzy
-#| msgid "Now we have defined our profile we need to include it on our test class. We do this with `@TestProfile(MockGreetingProfile.class)`."
 msgid "Now we have defined our profile we need to include it on our test class.  We do this by annotating the test class with `@TestProfile(MockGreetingProfile.class)`."
 msgstr "プロファイルを定義したので、それをテストクラスに含める必要があります。 `@TestProfile(MockGreetingProfile.class)` で、これを行うことが出来ます。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:621
 #, fuzzy
-#| msgid "All the test profile config is stored in a single class, which makes it easy to tell if the previous test ran with the same configuration."
 msgid "All the test profile configuration is stored in a single class, which makes it easy to tell if the previous test ran with the same configuration."
 msgstr "テストプロファイルの設定はすべて単一のクラスに保存されているので、前回のテストが同じ設定で実行されたかどうかが簡単にわかります。"
 
