--- a/l10n/po/ja_JP/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.5.Final released - Maintenance release'\n"
@@ -34,11 +34,19 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.7.5.Final リリース - メンテナンスリリース'\n"
+"date: 2022-03-16\n"
+"tags: release\n"
+"synopsis: 2.7.5.Final は、2.7 リリーストレインの 5 回目のメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:11
+#, fuzzy
 msgid "Today, we released 2.7.5.Final which, as usual, only contains bugfixes and documentation improvements."
-msgstr ""
+msgstr "本日、2.7.5.Finalをリリースしましたが、例によってバグフィックスとドキュメントの改善のみが含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:13
@@ -58,8 +66,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.5.Final[the full changelog of 2.7.5.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.5.Final[2.7.5.Final の完全な変更履歴は、GitHub で]入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-16-quarkus-2-7-5-final-released.adoc:20
