--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-security.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2022-03-17 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,6 +43,31 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-security.adoc:16
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.auth.enabled-in-dev-mode]]`link:#quarkus-security_quarkus.security.auth.enabled-in-dev-mode[quarkus.security.auth.enabled-in-dev-mode]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether authorization is enabled in dev mode or not. In other launch modes authorization is always enabled.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-security.adoc:17
+#: upstream/_generated-config/main/config/quarkus-security.adoc:35
+#, no-wrap
+msgid "boolean"
+msgstr "boolean"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-security.adoc:20
+#, no-wrap
+msgid "`true`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-security.adoc:25
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.security-providers]]`link:#quarkus-security_quarkus.security.security-providers[quarkus.security.security-providers]`\n"
 "\n"
 "[.description]\n"
@@ -52,13 +77,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-security.adoc:17
+#: upstream/_generated-config/main/config/quarkus-security.adoc:26
 #, no-wrap
 msgid "list of string"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-security.adoc:25
+#: upstream/_generated-config/main/config/quarkus-security.adoc:34
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.deny-unannotated-members]]`link:#quarkus-security_quarkus.security.deny-unannotated-members[quarkus.security.deny-unannotated-members]`\n"
@@ -70,13 +95,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-security.adoc:26
-#, no-wrap
-msgid "boolean"
-msgstr "boolean"
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-security.adoc:28
+#: upstream/_generated-config/main/config/quarkus-security.adoc:37
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
