--- a/l10n/po/ja_JP/_posts/2022-03-17-quarkus-newsletter-18.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-17-quarkus-newsletter-18.adoc.po
@@ -49,9 +49,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:17
 msgid "Want to get newsletters in your inbox? https://quarkus.io/newsletter[Sign up for the newsletter] using the on page form."
-msgstr ""
+msgstr "ニュースレターを受信してみませんか？ページ上のフォームを使って link:https://quarkus.io/newsletter[ニュースレターに登録]してください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-17-quarkus-newsletter-18.adoc:18
 msgid "We've also included the list of the newest found online stories. Give it a read and if you feel something is missing or have an article coming out for future Quarkus Newsletter install the https://github.com/quarkusio/url2quarkuspub[bookmarklet] on your laptop and phone to easily submit a story. If you prefer the manual way please https://github.com/quarkusio/quarkusio.github.io/issues[open an issue] with a short description and a url."
-msgstr ""
+msgstr "また、最新のオンラインストーリーのリストも掲載されています。読んでみて、何か足りないと感じたり、今後のQuarkus Newsletterに掲載予定の記事がある場合は、ノートパソコンや携帯電話に link:https://github.com/quarkusio/url2quarkuspub[ブックマークレット]をインストールすると、簡単に記事を投稿することができます。手動での投稿をご希望の場合は、簡単な説明とURLを入力して link:https://github.com/quarkusio/quarkusio.github.io/issues[Issue]をオープンしてください。"
